--- a/XYZReader/src/main/res/layout/activity_article_detail.xml
+++ b/XYZReader/src/main/res/layout/activity_article_detail.xml
@@ -12,42 +12,34 @@
             android:id="@+id/collapse_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:contentScrim="@color/colorPrimary"
+            app:contentScrim="@android:color/transparent"
             app:expandedTitleGravity="start|bottom"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
-            <LinearLayout
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
+                android:layout_height="wrap_content"
                 app:layout_collapseMode="parallax">
-                <FrameLayout
-                    android:id="@+id/photo_container"
+                <com.example.xyzreader.ui.DynamicHeightNetworkImageView
+                    android:id="@+id/photo"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/photo_placeholder">
-                    <!--suppress AndroidLintContentDescription -->
-                    <ImageView
-                        android:id="@+id/photo"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="112dp"
-                        android:background="@drawable/photo_background_protection" />
-
-                </FrameLayout>
+                    android:layout_height="100dp"
+                    android:scaleType="centerCrop"
+                    android:background="@color/photo_placeholder" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/photo_background_protection"/>
                 <LinearLayout
                     android:id="@+id/meta_bar"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="#333"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:paddingLeft="@dimen/detail_inner_horiz_margin"
                     android:paddingRight="@dimen/detail_inner_horiz_margin"
                     android:paddingTop="@dimen/detail_metabar_vert_padding"
                     android:paddingBottom="@dimen/detail_metabar_vert_padding"
-                    android:layout_marginBottom="@dimen/detail_metabar_vert_padding">
+                    android:layout_marginBottom="@dimen/detail_metabar_vert_padding"
+                    android:layout_gravity="bottom">
 
                     <TextView
                         android:id="@+id/article_title"
@@ -68,7 +60,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="#8fff" />
                 </LinearLayout>
-            </LinearLayout>
+            </FrameLayout>
             <android.support.v7.widget.Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="?actionBarSize"
