--- a/XYZReader/src/main/res/layout/activity_article_detail.xml
+++ b/XYZReader/src/main/res/layout/activity_article_detail.xml
@@ -24,7 +24,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:scaleType="centerCrop"
-                    android:background="@color/photo_placeholder" />
+                    android:background="@color/photo_placeholder"
+                    android:transitionName="@string/transition_photo" />
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
